0.7.0 - 0.7.1
-------------

	* added possibility to specify timeout until ReadersSupport gives up
	* RubyDebuggerProxy.checkConnection() fixed for ruby-debug
	* propagating RubyDebuggerException to the client (frontend)
