@@ -4,4 +4,5 @@
 	* added possibility to specify timeout until ReadersSupport gives up
 	* RubyDebuggerProxy.checkConnection() fixed for ruby-debug
 	* propagating RubyDebuggerException to the client (frontend)
+	* fixed NPE during reading a number of added breakpoint
 
